--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Origin" content="{{ site.url }}"/>
 <meta charset="utf8">
 <link rel="icon" href="//0.0.0.0:8088/favicon.ico" type="image/png">
-<link href="https://cdn.jsDelivr.net/gh/iglake/cssjs@v1.3/css/style.css" rel="stylesheet" type="text/css">
+<link href="https://cdn.jsDelivr.net/gh/iglake/cssjs@{{site.cssrelease}}/css/style.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css" media="all">
 <!--
 <link href="https://cdn.statically.io/gh/iglake/cssjs/master/css/style.css" rel="stylesheet" type="text/css">
