--- a/style.css
+++ b/style.css
@@ -3,9 +3,18 @@
 body {
   background-image: linear-gradient(to bottom right, black,blue);
   background-image:url({{site.static}}/{{site.pgw}}{{site.bgimg}});
+  background-image:url({{site.static}}/{{site.pgw}}/ipfs/uAXAALxIpChgBcBEU8jPY_IQZ6ToAfIs7luk1mnzxnWQSCW5hc2ExLmpwZxiAwwEKAggB/nasa1.jpg);
+  background-image:url(http://127.0.0.1:8080/ipfs/uAXAALxIpChgBcBEU8jPY_IQZ6ToAfIs7luk1mnzxnWQSCW5hc2ExLmpwZxiAwwEKAggB/nasa1.jpg);
   background-size: cover;
   /* min-height: 100%; */
   color: #546;
+}
+img[alt=KYC] {
+ display:block; float: right;
+ padding: 0.5em;
+ right-margin: 10px;
+ text-align:right;
+ width:140px;
 }
 #panel {
  opacity: 0.9;
@@ -17,39 +26,41 @@ a:visited { color: #26B; }
 a:active { color: blue; }
 
 #first,.first {
- opacity: 0.46;
+ font-size: 24px;
+ opacity: 0.98;
  color: white;
  position: sticky !important;
+ padding: 2em;
  margin-top: 108px;
  margin-bottom: 1px;
  /* right: 50%; margin-right: -382px; */
 
- /*
  z-index: -10;
+ background: rgba(80,0,240,.6) !important;
+}
+
+ /*
  bottom: -200px;
- background: lightpink;
  background: rgb(220,200,240);
  */
 }
 
 div {
+ font-size: 14px;
  background-image: linear-gradient(to bottom left, white,royalblue);
+ border-radius: 3px;
  color: black;
  /*
- opacity: 0.46;
- background: orange;
  background-image: linear-gradient(to bottom right, white,darkgrey);
- border-radius: 8px;
  box-shadow:2px 10px 4px rgba(0, 0, 0, 0.40);
   */
- padding: 2em;
- font-size: 24px;
+ padding: 0;
  text-align: justify;
+ text-align-last: left;
 }
 
 div.content {
- opacity: 0.96;
- color: white; background: rgba(1,0,2,.6); opacity: 1.0; 
+ color: white; background: rgba(25,5,50,.9); opacity: 1.0; 
 
  position: relative;
  max-width: 740px;
@@ -58,7 +69,6 @@ div.content {
 
 
  width: 100%;
- padding: 1em;
 
   border-radius: 4px;
   box-shadow:2px 20px 10px rgba(0, 0, 0, 0.40);
